[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Piece.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0

[node name="Button" type="Button" parent="."]
show_behind_parent = true
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0

[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
